--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -34,6 +34,12 @@ $highlightBtnColor:#efa82c;
     }
     
     
+    .inline-btn.optionlist {
+        display:none;
+    }
+
+    
+    
     
 }
 
