administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -44,6 +44,11 @@ $highlightBtnColor:#efa82c;
 }
 
 
+.progress-bar.percent-complete>div {
+    min-width: 4px;
+}
+
+
 .inline-navigation-menu li.active {
     border-bottom: 4px solid $highlightBtnColor;
 }
