administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -34,13 +34,14 @@ $highlightBtnColor:#efa82c;
     }
     
     
+    
+    
+}
+
+[data-view="singleProjectListItemDetail"]{
     .inline-btn.optionlist {
         display:none;
     }
-
-    
-    
-    
 }
 
 
