administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -68,6 +68,8 @@
 
 .inline-navigation-menu li.menu-user-configuration:before {
     content: "\f013";
+    font-family: FontAwesome;
+    font-size: 20px;
 }
 
 
