administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -60,6 +60,11 @@ $highlightBtnColor:#efa82c;
     padding-bottom: 10px;
 }
 
+.inline-navigation-menu li.menu-user-configuration {
+    float: right;
+}
+
+
 
 .user-profile-icon {
     
