administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -62,6 +62,10 @@ $highlightBtnColor:#efa82c;
 
 .inline-navigation-menu li.menu-user-configuration {
     float: right;
+    margin-right:10px;
+    button {
+        font-size: 0;
+    }
 }
 
 
