administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/darkTheme.customCSS.css
+++ b/app/darkTheme.customCSS.css
@@ -112,6 +112,9 @@ $mainStyleColor:#efa82c;
 
     ul.item-tags li {
         background-color: $tagBtnColor;
+        &:hover {
+            background-color: darken($tagBtnColor, 10%);
+        }
     }
 
     .inline-btn.sort ul, .inline-btn.optionlist ul {
