administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -1551,6 +1551,11 @@ ul.item-tags li {
     max-width: 100px;
     overflow: hidden;
     text-overflow: ellipsis;
+    
+    &:hover{
+        background-color: darken($tagBtnColor, 10%);
+    }
+    
 }
 
 .item-title>.field-value {
