administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -40,6 +40,10 @@ $highlightBtnColor:#efa82c;
     
 }
 
+.ui-view.inset-shading > div, .calendar .month {
+    background: transparent;
+}
+
 [data-view="singleProjectListItemDetail"]{
     .inline-btn.optionlist {
         display:none;
