administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -44,6 +44,11 @@ $highlightBtnColor:#efa82c;
     background: transparent;
 }
 
+.day.today.active:after {
+    background-color: $highlightBtnColor;
+    border-color: transparent;
+}
+
 [data-view="singleProjectListItemDetail"]{
     .inline-btn.optionlist {
         display:none;
