--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -44,14 +44,14 @@ $highlightBtnColor:#efa82c;
     background: transparent;
 }
 
-.day.today:after {
-    background-color: $highlightBtnColor;
-    border-color: transparent;
-}
 
-.day.today {
+.day.today, .day.active, .day.today.active {
     color: white;
     font-weight: 400;
+    &:after {
+        background-color: $highlightBtnColor;
+        border-color: transparent;
+    }
 }
 
 [data-view="singleProjectListItemDetail"]{
