--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -3423,18 +3423,20 @@ img.static-map {
     
     
     
-.navigation-menu .ui-navigation-menu > ul li.active.menu-configuration-fixedsettings {
+.navigation-menu .ui-navigation-menu > ul li.menu-configuration-fixedsettings {
     position: fixed;
     bottom: 0;
     width: 300px;
     box-sizing: border-box;
 }
 
-.navigation-menu .ui-navigation-menu > ul li.active.menu-configuration-settings {
-   
+.navigation-menu .ui-navigation-menu > ul li.menu-configuration-settings {
+   visibility:hidden;
 }
     
-    
+.navigation-menu .ui-navigation-menu > ul li.menu-configuration-settings.bottom {
+   visibility:visible;
+}
     
     
     
