administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -340,6 +340,7 @@ label.boolean-field p {
     background-position: center;
     background-repeat: no-repeat;
     margin-bottom: 50px;
+    background-size: contain;
 }
 
 .user-form .application-welcome {
