--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -1,5 +1,30 @@
 $highlightBtnColor:#efa82c;
 
+
+
+
+
+.ui-view.login-form:before {
+    content: "";background: white;position: fixed;width: 100%;height: 100%;left: 0;top: 0;z-index: -1;
+    }
+
+
+    .ui-view.login-form:after {
+    content: "";background: #868686;position: fixed;width: 50%;height: 100%;right: 0;top: 0;z-index: -1;
+    }
+
+.ui-view.login-form {
+    width: 50%;
+    text-align: left;
+    margin: 0;
+    margin-left: calc( 32% - 400px );
+    margin-top: 50px;
+}
+
+
+
+
+
 .dark .uilist-pageination:before {
     color: $highlightBtnColor;
 }
