--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -2,14 +2,21 @@ $highlightBtnColor:#efa82c;
 
 
 
+.ui-view.login-form{
 
-
-.ui-view.login-form:before {
-    content: "";background: white;position: fixed;width: 100%;height: 100%;left: 0;top: 0;z-index: -1;
+    &:before {
+        content: "";
+        background: white;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        z-index: -1;
     }
 
 
-    .ui-view.login-form:after {
+    &:after {
         content: "";
         background: #e88224;
         position: fixed;
@@ -23,15 +30,22 @@ $highlightBtnColor:#efa82c;
         background-blend-mode: luminosity;
     }
 
-.ui-view.login-form {
+    
     width: 50%;
     text-align: left;
     margin: 0;
     margin-left: calc( 32% - 400px );
     margin-top: 50px;
+    
+    
+    input.text-input {
+        color: black;
+        background-color: white;
+        border-radius: 100px;
+        margin-bottom: 10px;
+    }
+
 }
-
-
 
 
 
