--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -44,6 +44,12 @@ $highlightBtnColor:#efa82c;
         border-radius: 100px;
         margin-bottom: 10px;
     }
+    
+    
+    color: black;
+    .top-left>.lbl-txt {
+        color: black;
+    }
 
 }
 
