administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -49,7 +49,7 @@
 .navigation-menu li.menu-main-tags:before{
     content: "\f02c";
 }
-.navigation-menu li.menu-main-archive:before{
+.navigation-menu li.menu-main-archive:before, .navigation-menu li.menu-referrals-archive:before{
     content: "\f187";
 }
 .navigation-menu li.menu-main-messages:before{
