administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -75,7 +75,7 @@
 }
 
 
-.navigation-menu menu-community-mobile:before{
+.navigation-menu li.menu-community-mobile:before{
     content: "\f10b";
 }
 
