administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -3042,7 +3042,7 @@ img.static-map {
     }
 
 
-   .info-button:before {
+   .info-button {
                   
                     width: 20px;
                     height: 20px;
@@ -3053,7 +3053,7 @@ img.static-map {
                     margin: 0 10px;
                     background-repeat: no-repeat;
                     
-                }
+    }
 
      
 
