administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -8,6 +8,11 @@
     font-size: 20px;
 }
 
+
+.info-button:before {
+    content: "\f05a";
+}
+
 .navigation-menu li.active:before {
     color: white;
 }
