administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -3050,7 +3050,7 @@ img.static-map {
                     background-size: 100%;
                     background-position: center;
                     vertical-align: top;
-                    margin: 0 10px;
+                    margin: 10px;
                     background-repeat: no-repeat;
                     
     }
