administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/sharedGeneratedStyles.customCSS.css
+++ b/app/sharedGeneratedStyles.customCSS.css
@@ -80,6 +80,10 @@ if($config->getParameter('showSplitProjectDetail')){
         height: 100%;
     }
     
+    [data-view="splitProjectDetail"].ui-view.inset-menu-shading {
+        display: contents;
+    }
+    
     <?php
     
 }
