administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -102,7 +102,7 @@
 }
 
 .inline-navigation-menu li.menu-layout-list:before {
-    content: "\f04c;
+    content: "\f04c";
     font-family: FontAwesome;
     font-size: 20px;
 }
