administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -1913,6 +1913,11 @@ span.filter-btns {
     color:white;
 }
 
+.inline-btn.filter li.locked {
+    display:none;
+    
+}
+
 
 .inline-btn.sort.hasFilter, .inline-btn.sort.hasOrder {
     color: $tagBtnColor;
