administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -1918,7 +1918,7 @@ span.filter-btns {
     
 }
 
-.inline-btn.filter .span.locked{
+.inline-btn.filter span.locked{
     float: left;
     background: rgba(0,0,0,0.2);
     padding: 4px 10px;
