administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -298,8 +298,8 @@ button.inline-btn.add, button.primary-btn {
 }
 
 
-.selectable{
-    &button.primary-btn {
+button.selectable{
+    &.primary-btn {
         border: 1px dashed mediumseagreen;
         background-color: transparent;
         
