--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -646,10 +646,11 @@ body.dragover .file-item.droppable-hide {
 .layout-list .file-list {
      .file-item {
         display: block;
-        width: 100%;
-        background-color: #23232f;
+        width: auto;
+        background-color: rgba(255,255,255,0.1);
         margin: 5px 0;
         height: 50px;
+        border-radius: 3px;
     }
      .file-item .file-container, .file-item .file-container>span {
         background-color: transparent;
