administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/sharedGeneratedStyles.customCSS.css
+++ b/app/sharedGeneratedStyles.customCSS.css
@@ -47,13 +47,19 @@ if($useFontAwesome){
 }
 
 
-    $offset=10;
+    $offsetY=10;
+    $offsetX=10;
     foreach(['remove', 'edit', 'download'] as $fileFn){
         
 
             ?>
                .file-list .file-item button.<?php echo $fileFn; ?>-btn {
-                    top:<?php echo $offset; $offset+=30;?>px;
+                    top:<?php echo $offsetY; $offsetY+=30;?>px;
+                }
+                
+                layout-list .file-list .file-item button.<?php echo $fileFn; ?>-btn {
+                    top:10px;
+                    right:<?php echo $offsetX; $offsetX+=30;?>px;
                 }
            <?php  
         
