administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/sharedGeneratedStyles.customCSS.css
+++ b/app/sharedGeneratedStyles.customCSS.css
@@ -57,7 +57,7 @@ if($useFontAwesome){
                     top:<?php echo $offsetY; $offsetY+=30;?>px;
                 }
                 
-                layout-list .file-list .file-item button.<?php echo $fileFn; ?>-btn {
+                .layout-list .file-list .file-item button.<?php echo $fileFn; ?>-btn {
                     top:10px;
                     right:<?php echo $offsetX; $offsetX+=30;?>px;
                 }
