administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -123,7 +123,7 @@
         content: "\f009";
         font-family: FontAwesome;
         font-size: 20px;
-        color:mediumseagrean;
+        color:mediumseagreen;
     }
     button.remove-btn:after{
         content: "\f00d";
